Make all data viewable to all users - remove user-specific filtering

--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,12 @@
     "dev": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["farming", "agriculture", "api", "nodejs"],
+  "keywords": [
+    "farming",
+    "agriculture",
+    "api",
+    "nodejs"
+  ],
   "author": "NHFarming",
   "license": "ISC",
   "type": "commonjs",
