Update deployment configuration for Render with weather integration

--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -13,6 +13,15 @@ services:
         generateValue: true
       - key: FRONTEND_URL
         value: https://nhfarming-frontend.onrender.com
+      # Optional: Weather station configuration
+      # - key: ECOWITT_LOCAL_URL
+      #   value: http://YOUR_STATION_IP
+      # - key: ECOWITT_APP_KEY
+      #   value: your_application_key
+      # - key: ECOWITT_USER_API_KEY
+      #   value: your_api_key
+      # - key: ECOWITT_DEVICE_MAC
+      #   value: your_device_mac
     healthCheckPath: /health
     autoDeploy: true
 
