--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "axios": "^1.11.0",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
