--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "node index.js"
   },
   "keywords": [
     "farming",
@@ -22,8 +21,6 @@
     "npm": ">=8.0.0"
   },
   "dependencies": {
-    "axios": "^1.11.0",
-    "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
@@ -31,7 +28,6 @@
     "form-data": "^4.0.4",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
-    "node-fetch": "^3.3.2",
     "nodemailer": "^6.10.1",
     "sqlite3": "^5.1.7"
   }
