🔧 Update Render config: Set PORT=3001 for backend service

--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -5,7 +5,7 @@ services:
     env: node
     plan: free
     buildCommand: npm install
-    startCommand: npm start
+    startCommand: PORT=3001 npm start
     envVars:
       - key: NODE_ENV
         value: production
