🔧 Fix deployment issues
- Move render.yaml to root directory for proper deployment
- Update Node.js version to 20+ for React Router v7 compatibility
- Fix missing MenuItem import in CropsPage.js
- Add NODE_VERSION environment variable to render.yaml
- Fix rootDir configuration for both backend and frontend
- Ensure proper build paths and commands
- Remove duplicate envVars sections in render.yaml
- Test frontend build successfully

--- a/render.yaml
+++ b/render.yaml
@@ -4,9 +4,12 @@ services:
     name: nhfarming-backend
     env: node
     plan: free
+    rootDir: backend
     buildCommand: npm install
     startCommand: PORT=3001 npm start
     envVars:
+      - key: NODE_VERSION
+        value: 20
       - key: NODE_ENV
         value: production
       - key: JWT_SECRET
@@ -31,9 +34,12 @@ services:
     name: nhfarming-frontend
     env: static
     plan: free
-    buildCommand: cd frontend && npm install && npm run build
-    staticPublishPath: frontend/build
+    rootDir: frontend
+    buildCommand: npm install && npm run build
+    staticPublishPath: build
     envVars:
+      - key: NODE_VERSION
+        value: 20
       - key: REACT_APP_API_URL
         value: https://nhfarming-backend.onrender.com/api
     autoDeploy: true 
