🏠 Convert to local project setup
- Add comprehensive LOCAL_SETUP.md guide
- Create setup-local.sh automated setup script
- Add init-local-db.js database initialization
- Create env.example files for both backend and frontend
- Configure for complete local development
- Remove cloud dependencies for local-only operation
- Ready for offline development and customization

--- a/backend/env.example
+++ b/backend/env.example
@@ -1,33 +1,31 @@
-# NHFarming Backend Environment Variables
-# Copy this file to .env and fill in your actual values
+# 🏠 NHFarming Local Development Environment
+# Copy this file to .env and customize for your local setup
 
 # Server Configuration
+PORT=3001
 NODE_ENV=development
-PORT=5000
 
-# JWT Authentication
-JWT_SECRET=your-super-secret-key-here
+# JWT Configuration (Change this to a secure random string)
+JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
 
-# Frontend URL (for CORS)
+# Frontend URL (for CORS - keep as localhost for local development)
 FRONTEND_URL=http://localhost:3000
 
-# Database
-DB_PATH=./nhfarming.db
+# Database Configuration (SQLite - local file)
+DB_PATH=./farm.db
 
-# OpenAI API (for voice transcription)
-OPENAI_API_KEY=your_openai_api_key
+# Optional: Google Maps API Key (for field mapping features)
+# Get your API key from: https://console.cloud.google.com/
+# GOOGLE_MAPS_API_KEY=your-google-maps-api-key-here
 
-# Weather Station Configuration (Optional)
-# Local connection (recommended)
-ECOWITT_LOCAL_URL=http://192.168.1.100
+# Optional: Email Configuration (for password reset, etc.)
+# SMTP_HOST=smtp.gmail.com
+# SMTP_PORT=587
+# SMTP_USER=your-email@gmail.com
+# SMTP_PASS=your-app-password
 
-# OR Cloud API connection
+# Optional: Weather Station Configuration (Ecowitt)
+# ECOWITT_LOCAL_URL=http://YOUR_STATION_IP
 # ECOWITT_APP_KEY=your_application_key
 # ECOWITT_USER_API_KEY=your_api_key
-# ECOWITT_DEVICE_MAC=your_device_mac
-
-# Email Configuration (Optional)
-# EMAIL_HOST=smtp.gmail.com
-# EMAIL_PORT=587
-# EMAIL_USER=your-email@gmail.com
-# EMAIL_PASS=your-app-password 
+# ECOWITT_DEVICE_MAC=your_device_mac 
