🚀 Complete application update - ready for deployment

--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "node index.js"
+    "dev": "nodemon index.js",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "keywords": [
     "farming",
@@ -30,5 +32,10 @@
     "multer": "^2.0.2",
     "nodemailer": "^6.10.1",
     "sqlite3": "^5.1.7"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.10",
+    "supertest": "^6.3.3"
   }
 }
