--- a/backend/env.example
+++ b/backend/env.example
@@ -25,7 +25,14 @@ DB_PATH=./farm.db
 # SMTP_PASS=your-app-password
 
 # Optional: Weather Station Configuration (Ecowitt)
+# Local Network Access (recommended for faster data)
 # ECOWITT_LOCAL_URL=http://YOUR_STATION_IP
+# Example: ECOWITT_LOCAL_URL=http://192.168.1.100
+
+# Cloud API Access (fallback if local doesn't work)
+# Get these from: https://api.ecowitt.net/
 # ECOWITT_APP_KEY=your_application_key
 # ECOWITT_USER_API_KEY=your_api_key
-# ECOWITT_DEVICE_MAC=your_device_mac 
+# ECOWITT_DEVICE_MAC=your_device_mac
+
+# Note: You can use either local network OR cloud API, or both (local preferred) 
