--- a/frontend/env.example
+++ b/frontend/env.example
@@ -10,4 +10,8 @@ REACT_APP_API_URL=http://localhost:3001/api
 
 # Optional: Application Configuration
 # REACT_APP_NAME=NHFarming
-# REACT_APP_VERSION=1.0.0 
+# REACT_APP_VERSION=1.0.0
+
+# Optional: OpenWeatherMap API Key (for user location weather)
+# Get your API key from: https://openweathermap.org/api
+# REACT_APP_OPENWEATHER_API_KEY=your-openweathermap-api-key-here 
