--- a/render.yaml
+++ b/render.yaml
@@ -5,7 +5,7 @@ services:
     env: node
     plan: free
     rootDir: backend
-    buildCommand: npm install
+    buildCommand: npm install && node init-db-with-data.js
     startCommand: PORT=3001 npm start
     envVars:
       - key: NODE_VERSION
