Implement crop-field-farm relationships and add seasons to crops - Updated database schema to link applications to both crops and fields - Added field_id to crops table for proper field linking - Added season_year, status, acres, and harvest dates to crops - Updated frontend CropsPage to handle new crop fields - Enhanced applications and crops APIs to show farm relationships - Added proper foreign key constraints and unique constraints - Updated database initialization and fix scripts

--- a/backend/env.example
+++ b/backend/env.example
@@ -14,6 +14,12 @@ FRONTEND_URL=http://localhost:3000
 # Database Configuration (SQLite - local file)
 DB_PATH=./farm.db
 
+# Google Drive Integration (for database sync and backup)
+# Follow GOOGLE_DRIVE_SETUP.md for detailed setup instructions
+# GOOGLE_DRIVE_FOLDER_ID=your_google_drive_folder_id_here
+# GOOGLE_APPLICATION_CREDENTIALS=google-credentials.json
+# AUTO_SYNC_ENABLED=true
+
 # Optional: Google Maps API Key (for field mapping features)
 # Get your API key from: https://console.cloud.google.com/
 # GOOGLE_MAPS_API_KEY=your-google-maps-api-key-here
@@ -35,4 +41,10 @@ DB_PATH=./farm.db
 # ECOWITT_USER_API_KEY=your_api_key
 # ECOWITT_DEVICE_MAC=your_device_mac
 
-# Note: You can use either local network OR cloud API, or both (local preferred) 
+# Note: You can use either local network OR cloud API, or both (local preferred)
+
+# Optional: Weather Location for Fallback Data
+# Set your latitude and longitude for more accurate fallback weather
+# Find your coordinates at: https://www.latlong.net/
+# WEATHER_LATITUDE=-34.0222563
+# WEATHER_LONGITUDE=137.8448953 
